ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block1/input.ts:2:7
  |
2 |     1 + 
  |       ^

